--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,33 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
+@INPROCEEDINGS{10223893,
+  author={Tadik, Serhat and Güzel, Sadi and Çullu, Kaan and Acar, Burak},
+  booktitle={2023 31st Signal Processing and Communications Applications Conference (SIU)},
+  title={G-HCF: Product Recommendation by GNN Based Hybrid Collaborative Filtering},
+  year={2023},
+  volume={},
+  number={},
+  pages={1-4},
+  doi={10.1109/SIU59756.2023.10223893}}
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,},
-  preview={brownian-motion.gif}
-}
+@ARTICLE{10149068,
+  author={Tadik, Serhat and Varner, Michael A. and Mitchell, Frost and Durgin, Gregory D.},
+  journal={IEEE Journal of Radio Frequency Identification},
+  title={Augmented RF Propagation Modeling},
+  year={2023},
+  volume={7},
+  number={},
+  pages={211-221},
+  doi={10.1109/JRFID.2023.3285452}}
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
-}
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
-}
+@ARTICLE{10293151,
+  author={Tadik, Serhat and Graves, Kaitlyn M. and Varner, Michael A. and Anderson, Christopher R. and Johnson, David and Kasera, Sneha K. and Patwari, Neal and der Merwe, Jacobus Van and Durgin, Gregory D.},
+  journal={IEEE Journal of Radio Frequency Identification},
+  title={Digital Spectrum Twins for Enhanced Spectrum Sharing and Other Radio Applications},
+  year={2023},
+  volume={},
+  number={},
+  pages={1-1},
+  doi={10.1109/JRFID.2023.3327212}}
