--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
 @INPROCEEDINGS{10223893,
   author={Tadik, Serhat and Güzel, Sadi and Çullu, Kaan and Acar, Burak},
   booktitle={2023 31st Signal Processing and Communications Applications Conference (SIU)},
-  title={G-HCF: Product Recommendation by GNN Based Hybrid Collaborative Filtering},
+  ,title={G-HCF: Product Recommendation by GNN Based Hybrid Collaborative Filtering},
   year={2023},
   volume={},
   number={},
