--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,7 @@
   volume={},
   number={},
   pages={1-1},
-  doi={10.1109/JRFID.2023.3327212}
+  doi={10.1109/JRFID.2023.3327212},
   preview={DST.gif}}
 
 
