--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,7 +10,7 @@
   number={},
   pages={1-1},
   doi={10.1109/JRFID.2023.3327212},
-  preview={DST.gif}}
+  preview_img={DST.gif}}
 
 
 
@@ -23,14 +23,3 @@
   number={},
   pages={211-221},
   doi={10.1109/JRFID.2023.3285452}}
-
-
-@INPROCEEDINGS{10223893,
-  author={Tadik, Serhat and Güzel, Sadi and Çullu, Kaan and Acar, Burak},
-  booktitle={2023 31st Signal Processing and Communications Applications Conference (SIU)},
-  ,title={G-HCF: Product Recommendation by GNN Based Hybrid Collaborative Filtering},
-  year={2023},
-  volume={},
-  number={},
-  pages={1-4},
-  doi={10.1109/SIU59756.2023.10223893}}
