--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,7 +10,8 @@
   number={},
   pages={1-1},
   doi={10.1109/JRFID.2023.3327212},
-  selected={true}}
+  selected={true},
+  preview="DST.gif"}
 
 
 
@@ -22,4 +23,5 @@
   volume={7},
   number={},
   pages={211-221},
-  doi={10.1109/JRFID.2023.3285452}}
+  doi={10.1109/JRFID.2023.3285452},
+  preview="augmented_modeling.gif"}
