--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -25,3 +25,14 @@
   pages={211-221},
   doi={10.1109/JRFID.2023.3285452},
   preview="augmented_modeling.gif"}
+
+@INPROCEEDINGS{10223893,
+  author={Tadik, Serhat and Güzel, Sadi and Çullu, Kaan and Acar, Burak},
+  booktitle={2023 31st Signal Processing and Communications Applications Conference (SIU)},
+  title={G-HCF: Product Recommendation by GNN Based Hybrid Collaborative Filtering},
+  year={2023},
+  volume={},
+  number={},
+  pages={1-4},
+  keywords={Graph neural networks;Matrix decomposition;Collaborative filtering;Standards;Filtering;Stochastic processes;Silicon;Product recommendation;Collaborative filtering;GNN},
+  doi={10.1109/SIU59756.2023.10223893}}
