--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -36,5 +36,5 @@
   number={},
   pages={1-4},
   keywords={Graph neural networks;Matrix decomposition;Collaborative filtering;Standards;Filtering;Stochastic processes;Silicon;Product recommendation;Collaborative filtering;GNN},
-  doi={10.1109/SIU59756.2023.10223893}
+  doi={10.1109/SIU59756.2023.10223893},
   preview="ghcf.png"}
