update selected publications

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,6 +24,7 @@
   number={},
   pages={211-221},
   doi={10.1109/JRFID.2023.3285452},
+  selected={true},
   preview="augmented_modeling.gif"}
 
 
