update the figure

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -127,7 +127,7 @@ function(x) {
 
 You can add interative plots using plotly + iframes :framed_picture:
 
-<div class="l-page">
+<div class="l-gutter">
   <iframe src="{{ '/assets/plotly/demo_TIREM_nopattern.html' | relative_url }}" frameborder='0' scrolling='no' height="500px" width="100%" style="border: 1px dashed grey;"></iframe>
 </div>
 
