--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -127,9 +127,10 @@ function(x) {
 
 You can add interative plots using plotly + iframes :framed_picture:
 
-<div class="l-gutter">
-  <iframe src="{{ '/assets/plotly/demo_TIREM_nopattern.html' | relative_url }}" frameborder='0' scrolling='no' height="500px" width="100%" style="border: 1px dashed grey;"></iframe>
+<div class="l-body">
+  <iframe src="{{ '/assets/plotly/demo_TIREM_nopattern.html' | relative_url }}" frameborder='0' scrolling='no' height="500px" width="100%" style="border: 4px dashed #3498db;"></iframe>
 </div>
+
 
 The plot must be generated separately and saved into an HTML file.
 To generate the plot that you see above, you can use the following code snippet:
