--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -127,8 +127,25 @@ function(x) {
 
 You can add interative plots using plotly + iframes :framed_picture:
 
-<div class="l-body">
-  <iframe src="{{ '/assets/plotly/dtm.html' | relative_url }}" frameborder='0' scrolling='yes' height="550px" width="100%" style="border: 1px solid rgba(150, 150, 150, 0.5);"></iframe>
+<style>
+.responsive-iframe {
+    position: relative;
+    padding-bottom: 56.25%; /* Adjust the percentage to suit your aspect ratio */
+    height: 0;
+    overflow: hidden;
+}
+
+.responsive-iframe iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+</style>
+
+<div class="l-body responsive-iframe">
+  <iframe src="{{ '/assets/plotly/dtm.html' | relative_url }}" frameborder="0" scrolling="yes" style="border: 1px solid rgba(150, 150, 150, 0.5);"></iframe>
 </div>
 
 
