--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -128,21 +128,31 @@ function(x) {
 You can add interative plots using plotly + iframes :framed_picture:
 
 <style>
+/* Desktop styles */
 .responsive-iframe {
-    position: relative;
-    padding-bottom: 56.25%; /* Adjust the percentage to suit your aspect ratio */
-    height: 0;
-    overflow: hidden;
+  position: relative;
+  padding-bottom: 56.25%; /* Aspect ratio */
+  height: 0;
+  overflow: hidden;
 }
 
 .responsive-iframe iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+/* Mobile styles */
+@media only screen and (max-width: 768px) {
+  .responsive-iframe iframe {
+    /* Adjust the aspect ratio for mobile devices */
+    padding-bottom: 75%; /* Adjust this value as needed */
+  }
 }
 </style>
+
 
 <div class="l-body responsive-iframe">
   <iframe src="{{ '/assets/plotly/dtm.html' | relative_url }}" frameborder="0" scrolling="yes" style="border: 1px solid rgba(150, 150, 150, 0.5);"></iframe>
