--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -127,31 +127,35 @@ function(x) {
 
 You can add interative plots using plotly + iframes :framed_picture:
 
-<style>
-/* Desktop styles */
-.responsive-iframe {
-  position: relative;
-  padding-bottom: 56.25%; /* Aspect ratio */
-  height: 0;
-  overflow: hidden;
-}
+<script>
+  // You would call this function when the page loads and when the window resizes
+  function adjustPlotly() {
+    var isMobile = window.matchMedia("only screen and (max-width: 768px)").matches;
+    var layoutUpdate = {};
 
-.responsive-iframe iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
+    if (isMobile) {
+      // Adjust the layout for mobile
+      layoutUpdate['coloraxis_colorbar'] = {
+        len: 0.5, // Shorten the colorbar
+        x: 0.95, // Adjust the position if needed
+      };
+    } else {
+      // Adjust the layout for desktop
+      layoutUpdate['coloraxis_colorbar'] = {
+        len: 1, // Full length colorbar
+        x: 1.05, // Position next to the plot
+      };
+    }
 
-/* Mobile styles */
-@media only screen and (max-width: 768px) {
-  .responsive-iframe iframe {
-    /* Adjust the aspect ratio for mobile devices */
-    padding-bottom: 75%; /* Adjust this value as needed */
+    // Use Plotly to update the layout
+    Plotly.relayout('plotly-div', layoutUpdate);
   }
-}
-</style>
+
+  // Add event listeners
+  window.addEventListener('load', adjustPlotly);
+  window.addEventListener('resize', adjustPlotly);
+</script>
+
 
 
 <div class="l-body responsive-iframe">
