update the figure

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -127,36 +127,22 @@ function(x) {
 
 You can add interative plots using plotly + iframes :framed_picture:
 
-<script>
-  // You would call this function when the page loads and when the window resizes
-  function adjustPlotly() {
-    var isMobile = window.matchMedia("only screen and (max-width: 768px)").matches;
-    var layoutUpdate = {};
+<style>
+.responsive-iframe {
+    position: relative;
+    padding-bottom: 36%; /* Adjust the percentage to suit your aspect ratio */
+    height: 0;
+    overflow: hidden;
+}
 
-    if (isMobile) {
-      // Adjust the layout for mobile
-      layoutUpdate['coloraxis_colorbar'] = {
-        len: 0.5, // Shorten the colorbar
-        x: 0.95, // Adjust the position if needed
-      };
-    } else {
-      // Adjust the layout for desktop
-      layoutUpdate['coloraxis_colorbar'] = {
-        len: 1, // Full length colorbar
-        x: 1.05, // Position next to the plot
-      };
-    }
-
-    // Use Plotly to update the layout
-    Plotly.relayout('plotly-div', layoutUpdate);
-  }
-
-  // Add event listeners
-  window.addEventListener('load', adjustPlotly);
-  window.addEventListener('resize', adjustPlotly);
-</script>
-
-
+.responsive-iframe iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+</style>
 
 <div class="l-body responsive-iframe">
   <iframe src="{{ '/assets/plotly/dtm.html' | relative_url }}" frameborder="0" scrolling="yes" style="border: 1px solid rgba(150, 150, 150, 0.5);"></iframe>
