update the figure

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -130,9 +130,16 @@ You can add interative plots using plotly + iframes :framed_picture:
 <style>
 .responsive-iframe {
     position: relative;
-    padding-bottom: 36%; /* Adjust the percentage to suit your aspect ratio */
+    padding-bottom: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
     height: 0;
-    overflow: hidden;
+    max-height: 550px; /* You can set a max-height if necessary */
+}
+
+@media screen and (max-width: 767px) { /* Adjust for mobile screens */
+    .responsive-iframe {
+        padding-bottom: 75%; /* Change the aspect ratio for smaller screens */
+        max-height: none;
+    }
 }
 
 .responsive-iframe iframe {
@@ -143,6 +150,7 @@ You can add interative plots using plotly + iframes :framed_picture:
     height: 100%;
 }
 </style>
+
 
 <div class="l-body responsive-iframe">
   <iframe src="{{ '/assets/plotly/dtm.html' | relative_url }}" frameborder="0" scrolling="yes" style="border: 1px solid rgba(150, 150, 150, 0.5);"></iframe>
