update the figure

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -130,9 +130,9 @@ You can add interative plots using plotly + iframes :framed_picture:
 <style>
 .responsive-iframe {
     position: relative;
-    width: 100%;
-    padding-bottom: 56.25%; /* Aspect ratio of 16:9 */
+    padding-bottom: 56.25%; /* Adjust the percentage to suit your aspect ratio */
     height: 0;
+    overflow: hidden;
 }
 
 .responsive-iframe iframe {
@@ -143,16 +143,10 @@ You can add interative plots using plotly + iframes :framed_picture:
     height: 100%;
 }
 </style>
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- other head elements -->
-</head>
-
 
 <div class="l-body responsive-iframe">
-  <iframe src="{{ '/assets/plotly/dtm.html' | relative_url }}" frameborder="0" scrolling="yes" style="border: 1px solid rgba(150, 150, 150, 0.5);"></iframe>
+  <iframe src="{{ '/assets/plotly/dtm.html' | relative_url }}" frameborder="0" scrolling="yes" height=550px style="border: 1px solid rgba(150, 150, 150, 0.5);"></iframe>
 </div>
-
 
 
 
