--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -145,7 +145,7 @@ You can add interative plots using plotly + iframes :framed_picture:
 </style>
 
 <div class="l-body">
-  <iframe src="{{ '/assets/plotly/dtm.html' | relative_url }}" frameborder="0" scrolling="yes" height= 550px margin-bottom= 12px style="border: 1px solid rgba(150, 150, 150, 0.5);"></iframe>
+  <iframe src="{{ '/assets/plotly/dtm.html' | relative_url }}" frameborder="0" scrolling="yes" height= 550px margin-bottom= 12px width=105% style="border: 1px solid rgba(150, 150, 150, 0.5);"></iframe>
 </div>
 
 
