--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -148,6 +148,14 @@ You can add interative plots using plotly + iframes :framed_picture:
   <iframe src="{{ '/assets/plotly/dtm.html' | relative_url }}" frameborder="0" scrolling="yes" height= "550px" margin-bottom= 12px width="105%" style="border: 1px solid rgba(150, 150, 150, 0.5);"></iframe>
 </div>
 
+<div class="l-body">
+  <iframe src="{{ '/assets/plotly/azaw3939_360.html' | relative_url }}" frameborder="0" scrolling="yes" height= "550px" margin-bottom= 12px width="105%" style="border: 1px solid rgba(150, 150, 150, 0.5);"></iframe>
+</div>
+
+<div class="l-body">
+  <iframe src="{{ '/assets/plotly/elevaw3939_360.html' | relative_url }}" frameborder="0" scrolling="yes" height= "550px" margin-bottom= 12px width="105%" style="border: 1px solid rgba(150, 150, 150, 0.5);"></iframe>
+</div>
+
 
 
 The plot must be generated separately and saved into an HTML file.
