update the patts

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -148,13 +148,38 @@ You can add interative plots using plotly + iframes :framed_picture:
   <iframe src="{{ '/assets/plotly/dtm.html' | relative_url }}" frameborder="0" scrolling="yes" height= "550px" margin-bottom= 12px width="105%" style="border: 1px solid rgba(150, 150, 150, 0.5);"></iframe>
 </div>
 
-<div class="l-body">
-  <iframe src="{{ '/assets/plotly/azaw3939_360.html' | relative_url }}" frameborder="0" scrolling="yes" height= "550px" margin-bottom= 12px width="105%" style="border: 1px solid rgba(150, 150, 150, 0.5);"></iframe>
+<style>
+.flex-container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 12px; /* Spacing between iframes */
+}
+
+.responsive-iframe {
+  flex: 0 0 48%; /* Each iframe will take up less than half of the container's width */
+  border: 1px solid rgba(150, 150, 150, 0.5);
+  height: 550px;
+  margin-bottom: 12px;
+}
+
+/* Optional: Add a media query for mobile screens to stack the iframes instead of side by side */
+@media screen and (max-width: 767px) {
+  .flex-container {
+    flex-direction: column;
+  }
+
+  .responsive-iframe {
+    width: 100%; /* Full width on mobile */
+  }
+}
+</style>
+
+<div class="l-body flex-container">
+  <iframe class="responsive-iframe" src="{{ '/assets/plotly/azaw3939_360.html' | relative_url }}" frameborder="0" scrolling="yes"></iframe>
+  <iframe class="responsive-iframe" src="{{ '/assets/plotly/elevaw3939_360.html' | relative_url }}" frameborder="0" scrolling="yes"></iframe>
 </div>
 
-<div class="l-body">
-  <iframe src="{{ '/assets/plotly/elevaw3939_360.html' | relative_url }}" frameborder="0" scrolling="yes" height= "550px" margin-bottom= 12px width="105%" style="border: 1px solid rgba(150, 150, 150, 0.5);"></iframe>
-</div>
 
 
 
