update the layout

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -149,35 +149,34 @@ You can add interative plots using plotly + iframes :framed_picture:
 </div>
 
 <style>
-.flex-container {
+.l-body-container {
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  gap: 12px; /* Spacing between iframes */
+  flex-wrap: wrap; /* Allows wrapping to next line on small screens */
 }
 
-.responsive-iframe {
-  flex: 0 0 48%; /* Each iframe will take up less than half of the container's width */
+.l-body {
+  flex: 1; /* Each child takes up equal space */
+  max-width: calc(50% - 6px); /* Adjusts for the border and ensures two divs fit in a row */
+  box-sizing: border-box;
+  margin-bottom: 12px; /* You had margin-bottom= 12px which is not correct CSS */
+}
+
+iframe {
+  width: 100%; /* Ensures the iframe takes the width of its parent */
+  height: 550px; /* Fixed height */
   border: 1px solid rgba(150, 150, 150, 0.5);
-  height: 550px;
-  margin-bottom: 12px;
-}
-
-/* Optional: Add a media query for mobile screens to stack the iframes instead of side by side */
-@media screen and (max-width: 767px) {
-  .flex-container {
-    flex-direction: column;
-  }
-
-  .responsive-iframe {
-    width: 100%; /* Full width on mobile */
-  }
 }
 </style>
 
-<div class="l-body flex-container">
-  <iframe class="responsive-iframe" src="{{ '/assets/plotly/azaw3939_360.html' | relative_url }}" frameborder="0" scrolling="yes"></iframe>
-  <iframe class="responsive-iframe" src="{{ '/assets/plotly/elevaw3939_360.html' | relative_url }}" frameborder="0" scrolling="yes"></iframe>
+<div class="l-body-container">
+  <div class="l-body">
+    <iframe src="{{ '/assets/plotly/azaw3939_360.html' | relative_url }}" frameborder="0" scrolling="yes"></iframe>
+  </div>
+  <div class="l-body">
+    <iframe src="{{ '/assets/plotly/elevaw3939_360.html' | relative_url }}" frameborder="0" scrolling="yes"></iframe>
+  </div>
 </div>
 
 
