--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -156,7 +156,7 @@ You can add interative plots using plotly + iframes :framed_picture:
   flex-wrap: wrap; /* Allows wrapping to next line on small screens */
 }
 
-.l-body {
+.l-body-double {
   flex: 1; /* Each child takes up equal space */
   max-width: calc(50% - 2px); /* Adjusts for the border and ensures two divs fit in a row */
   box-sizing: border-box;
@@ -171,10 +171,10 @@ iframe {
 </style>
 
 <div class="l-body-container">
-  <div class="l-body">
+  <div class="l-body-double">
     <iframe src="{{ '/assets/plotly/azaw3939_360.html' | relative_url }}" frameborder="0" scrolling="yes"></iframe>
   </div>
-  <div class="l-body">
+  <div class="l-body-double">
     <iframe src="{{ '/assets/plotly/elevaw3939_360.html' | relative_url }}" frameborder="0" scrolling="yes"></iframe>
   </div>
 </div>
