--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -149,26 +149,35 @@ You can add interative plots using plotly + iframes :framed_picture:
 </div>
 
 <style>
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden; /* Optional: might be necessary to remove scrollbars */
+}
+
 .l-body-container {
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  flex-wrap: wrap; /* Allows wrapping to next line on small screens */
+  flex-wrap: wrap;
 }
 
 .l-body-double {
-  flex: 1; /* Each child takes up equal space */
-  max-width: calc(50% - 2px); /* Adjusts for the border and ensures two divs fit in a row */
+  flex: 1;
+  max-width: calc(50% - 2px);
   box-sizing: border-box;
-  margin-bottom: 2px; /* You had margin-bottom= 12px which is not correct CSS */
+  margin-bottom: 2px;
 }
 
 iframe {
-  width: 100%; /* Ensures the iframe takes the width of its parent */
-  height: 300px; /* Fixed height */
+  width: 100%;
+  height: 300px;
   border: 1px solid rgba(150, 150, 150, 0.5);
+  margin: 0; /* Remove default margin */
+  padding: 0; /* Remove default padding */
 }
 </style>
+
 
 <div class="l-body-container">
   <div class="l-body-double">
