--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -164,13 +164,13 @@ html, body {
 
 .l-body-double {
   flex: 1;
-  max-width: calc(50% - 2px);
+  max-width: 50%;
   box-sizing: border-box;
-  margin-bottom: 2px;
+  margin-bottom: 0px;
 }
 
 iframe {
-  width: 100%;
+  width: 110%;
   height: 300px;
   border: 1px solid rgba(150, 150, 150, 0.5);
   margin: 0; /* Remove default margin */
