--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -149,41 +149,32 @@ You can add interative plots using plotly + iframes :framed_picture:
 </div>
 
 <style>
-html, body {
-  margin: 0;
-  padding: 0;
-  overflow: hidden; /* Optional: might be necessary to remove scrollbars */
-}
-
-.l-body-container {
+.l-page-container {
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  flex-wrap: wrap;
+  flex-wrap: wrap; /* Allows wrapping to next line on small screens */
 }
 
-.l-body-double {
-  flex: 1;
-  max-width: 60%;
+.l-page-double {
+  flex: 1; /* Each child takes up equal space */
+  max-width: calc(50% - 3px); /* Adjusts for the border and ensures two divs fit in a row */
   box-sizing: border-box;
-  margin-bottom: 0px;
+  margin-bottom: 3px; /* You had margin-bottom= 12px which is not correct CSS */
 }
 
 iframe {
-  width: 100%;
-  height: 300px;
+  width: 100%; /* Ensures the iframe takes the width of its parent */
+  height: 550px; /* Fixed height */
   border: 1px solid rgba(150, 150, 150, 0.5);
-  margin: 0; /* Remove default margin */
-  padding: 0; /* Remove default padding */
 }
 </style>
 
-
-<div class="l-body-container">
-  <div class="l-body-double">
+<div class="l-page-container">
+  <div class="l-page-double">
     <iframe src="{{ '/assets/plotly/azaw3939_360.html' | relative_url }}" frameborder="0" scrolling="yes"></iframe>
   </div>
-  <div class="l-body-double">
+  <div class="l-page-double">
     <iframe src="{{ '/assets/plotly/elevaw3939_360.html' | relative_url }}" frameborder="0" scrolling="yes"></iframe>
   </div>
 </div>
