--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -148,53 +148,36 @@ You can add interative plots using plotly + iframes :framed_picture:
   <iframe src="{{ '/assets/plotly/dtm.html' | relative_url }}" frameborder="0" scrolling="yes" height= "550px" margin-bottom= 12px width="105%" style="border: 1px solid rgba(150, 150, 150, 0.5);"></iframe>
 </div>
 
-<!DOCTYPE html>
-<html style="height: 100%; margin: 0; padding: 0;">
-<head>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      display: flex;
-      flex-direction: column; /* Stack child elements vertically */
-    }
+<style>
+.l-body-container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-wrap: wrap; /* Allows wrapping to next line on small screens */
+}
 
-    .l-body-container {
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      flex-wrap: wrap;
-      flex: 1; /* Takes up all available space */
-      margin: 0; /* Remove default margin */
-    }
+.l-body-double {
+  flex: 1; /* Each child takes up equal space */
+  max-width: calc(50% - 6px); /* Adjusts for the border and ensures two divs fit in a row */
+  box-sizing: border-box;
+  margin-bottom: 12px; /* You had margin-bottom= 12px which is not correct CSS */
+}
 
-    .l-body-double {
-      flex: 1; /* Each child takes up equal space */
-      width: 50%; /* Set width to take up half of the container */
-      box-sizing: border-box;
-    }
+iframe {
+  width: 100%; /* Ensures the iframe takes the width of its parent */
+  height: 550px; /* Fixed height */
+  border: 1px solid rgba(150, 150, 150, 0.5);
+}
+</style>
 
-    iframe {
-      width: 100%; /* Ensures the iframe takes the width of its parent */
-      height: 100vh; /* 100% of the viewport height */
-      border: 1px solid rgba(150, 150, 150, 0.5);
-      box-sizing: border-box;
-    }
-  </style>
-</head>
-<body>
-  <div class="l-body-container">
-    <div class="l-body-double">
-      <iframe src="{{ '/assets/plotly/azaw3939_360.html' | relative_url }}" frameborder="0" scrolling="yes"></iframe>
-    </div>
-    <div class="l-body-double">
-      <iframe src="{{ '/assets/plotly/elevaw3939_360.html' | relative_url }}" frameborder="0" scrolling="yes"></iframe>
-    </div>
+<div class="l-body-container">
+  <div class="l-body-double">
+    <iframe src="{{ '/assets/plotly/azaw3939_360.html' | relative_url }}" frameborder="0" scrolling="yes"></iframe>
   </div>
-</body>
-</html>
-
+  <div class="l-body-double">
+    <iframe src="{{ '/assets/plotly/elevaw3939_360.html' | relative_url }}" frameborder="0" scrolling="yes"></iframe>
+  </div>
+</div>
 
 
 
