--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -180,7 +180,13 @@ iframe {
 </div>
 
 
+<div class="l-body">
+  <iframe src="{{ '/assets/plotly/demo_TIREM_nopattern.html' | relative_url }}" frameborder="0" scrolling="yes" height= "550px" margin-bottom= 12px width="105%" style="border: 1px solid rgba(150, 150, 150, 0.5);"></iframe>
+</div>
 
+<div class="l-body">
+  <iframe src="{{ '/assets/plotly/demo_TIREMwAntenna.html' | relative_url }}" frameborder="0" scrolling="yes" height= "550px" margin-bottom= 12px width="105%" style="border: 1px solid rgba(150, 150, 150, 0.5);"></iframe>
+</div>
 
 The plot must be generated separately and saved into an HTML file.
 To generate the plot that you see above, you can use the following code snippet:
