--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -192,7 +192,7 @@ iframe {
 </div>
 
 The plot must be generated separately and saved into an HTML file.
-To generate the plot that you see above, you can use the following code snippet:
+To generate the plot above, you can use the following code snippet:
 
 {% highlight python %}
 import pandas as pd
