--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -142,33 +142,54 @@ You can add interative plots using plotly + iframes :framed_picture:
     width: 100%;
     height: 100%;
 }
+
+.l-body-container {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-wrap: wrap; /* Allows wrapping to next line on small screens */
+}
+
+.l-body-double {
+    flex: 1; /* Each child takes up equal space */
+    max-width: calc(50% - 0px); /* Adjusts for the border and ensures two divs fit in a row */
+    box-sizing: border-box;
+    margin-bottom: 12px; /* Adjusted the invalid CSS */
+}
+
+iframe {
+    width: 100%; /* Ensures the iframe takes the width of its parent */
+    height: auto; /* Allows the iframe height to expand as needed */
+    border: 1px solid rgba(150, 150, 150, 0.5);
+}
+
+@media screen and (max-width: 768px) {
+    .l-body-double {
+        max-width: 100%; /* On small screens, take up full width */
+    }
+
+    iframe {
+        height: 550px; /* Increase height on small screens */
+    }
+}
+
+@media screen and (min-width: 769px) {
+    .l-body {
+        padding: 0 12px; /* Add padding on larger screens */
+    }
+
+    iframe {
+        height: 350px; /* Set a fixed height on larger screens */
+    }
+}
 </style>
+
+<!-- Your existing HTML structure goes here -->
 
 <div class="l-body">
   <iframe src="{{ '/assets/plotly/dtm.html' | relative_url }}" frameborder="0" scrolling="yes" height= "550px" margin-bottom= 12px width="105%" style="border: 1px solid rgba(150, 150, 150, 0.5);"></iframe>
 </div>
 
-<style>
-.l-body-container {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  flex-wrap: wrap; /* Allows wrapping to next line on small screens */
-}
-
-.l-body-double {
-  flex: 1; /* Each child takes up equal space */
-  max-width: calc(70% - 0px); /* Adjusts for the border and ensures two divs fit in a row */
-  box-sizing: border-box;
-  margin-bottom: 12px; /* You had margin-bottom= 12px which is not correct CSS */
-}
-
-iframe {
-  width: 100%; /* Ensures the iframe takes the width of its parent */
-  height: 350px; /* Fixed height */
-  border: 1px solid rgba(150, 150, 150, 0.5);
-}
-</style>
 
 <div class="l-body-container">
   <div class="l-body-double">
