--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -126,13 +126,12 @@ function(x) {
 ## Interactive Plots
 
 You can add interative plots using plotly + iframes :framed_picture:
-
 <style>
 .responsive-iframe {
-    position: relative;
-    padding-bottom: 56.25%; /* Adjust the percentage to suit your aspect ratio */
-    height: 0;
     overflow: hidden;
+    padding-top: 56.25%;
+    position: relative;
+    height: 0;
 }
 
 .responsive-iframe iframe {
@@ -141,8 +140,14 @@ You can add interative plots using plotly + iframes :framed_picture:
     left: 0;
     width: 100%;
     height: 100%;
+    border: none;
 }
 
+@media only screen and (max-width: 600px) {
+    .responsive-iframe iframe {
+        height: 50vh; /* 50% of the viewport height */
+    }
+}
 .l-body-container {
     display: flex;
     justify-content: center;
