--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -127,73 +127,52 @@ function(x) {
 
 You can add interative plots using plotly + iframes :framed_picture:
 <style>
-.responsive-iframe {
-    overflow: hidden;
-    padding-top: 56.25%;
-    position: relative;
-    height: 0;
-}
-
-.responsive-iframe iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
+/* Ensure that iframes inside .l-body, .l-page, etc., are responsive and take full width and auto height */
+.l-body iframe,
+.l-page iframe,
+.l-body-outset iframe,
+.l-page-outset iframe,
+.l-screen iframe,
+.l-screen-inset iframe {
     width: 100%;
-    height: 100%;
-    border: none;
-}
-
-@media only screen and (max-width: 600px) {
-    .responsive-iframe iframe {
-        height: 50vh; /* 50% of the viewport height */
-    }
-}
-.l-body-container {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    flex-wrap: wrap; /* Allows wrapping to next line on small screens */
-}
-
-.l-body-double {
-    flex: 1; /* Each child takes up equal space */
-    max-width: calc(50% - 0px); /* Adjusts for the border and ensures two divs fit in a row */
-    box-sizing: border-box;
-    margin-bottom: 12px; /* Adjusted the invalid CSS */
-}
-
-iframe {
-    width: 100%; /* Ensures the iframe takes the width of its parent */
-    height: auto; /* Allows the iframe height to expand as needed */
+    height: auto;
     border: 1px solid rgba(150, 150, 150, 0.5);
 }
 
-@media screen and (max-width: 768px) {
-    .l-body-double {
-        max-width: 100%; /* On small screens, take up full width */
-    }
-
-    iframe {
-        height: 550px; /* Increase height on small screens */
-    }
+/* Optional: Add a bottom margin to iframes */
+iframe {
+    margin-bottom: 12px;
 }
 
-@media screen and (min-width: 769px) {
-    .l-body {
-        padding: 0 12px; /* Add padding on larger screens */
-    }
+/* Make sure colorbars don't overlap by providing enough space */
+/* Adjust the padding-bottom as necessary */
+.responsive-iframe {
+    padding-bottom: 56.25%; /* This percentage may need to be increased */
+    position: relative;
+    height: 0;
+    overflow: hidden;
+}
 
-    iframe {
-        height: 350px; /* Set a fixed height on larger screens */
+@media only screen and (max-width: 600px) {
+    /* On small screens, adjust the padding-bottom to give more space for the colorbar */
+    .responsive-iframe {
+        padding-bottom: 75%; /* Increase as needed */
     }
 }
 </style>
 
-<!-- Your existing HTML structure goes here -->
-
-<div class="l-body">
-  <iframe src="{{ '/assets/plotly/dtm.html' | relative_url }}" frameborder="0" scrolling="yes" height= "550px" margin-bottom= 12px width="105%" style="border: 1px solid rgba(150, 150, 150, 0.5);"></iframe>
+<!-- Example of an iframe using .l-body -->
+<div class="l-body responsive-iframe">
+  <iframe src="{{ '/assets/plotly/dtm.html' | relative_url }}" frameborder="0" scrolling="yes"></iframe>
 </div>
+
+<!-- Example of an iframe using .l-screen-inset for full width with some inset -->
+<div class="l-screen-inset responsive-iframe">
+  <iframe src="{{ '/assets/plotly/demo_Antenna.html' | relative_url }}" frameborder="0" scrolling="yes"></iframe>
+</div>
+
+<!-- Add more iframes as needed using the appropriate classes for the desired layout -->
+
 
 
 <div class="l-body-container">
@@ -205,9 +184,6 @@ iframe {
   </div>
 </div>
 
-<div class="l-body">
-  <iframe src="{{ '/assets/plotly/demo_Antenna.html' | relative_url }}" frameborder="0" scrolling="yes" height= "550px" margin-bottom= 12px width="105%" style="border: 1px solid rgba(150, 150, 150, 0.5);"></iframe>
-</div>
 
 <div class="l-body">
   <iframe src="{{ '/assets/plotly/demo_TIREM_nopattern.html' | relative_url }}" frameborder="0" scrolling="yes" height= "550px" margin-bottom= 12px width="105%" style="border: 1px solid rgba(150, 150, 150, 0.5);"></iframe>
