--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -135,7 +135,7 @@ You can add interative plots using plotly + iframes :framed_picture:
 .l-screen iframe,
 .l-screen-inset iframe {
     width: 100%;
-    height: auto;
+    height: 550px;
     border: 1px solid rgba(150, 150, 150, 0.5);
 }
 
