--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -162,13 +162,13 @@ iframe {
 </style>
 
 <!-- Example of an iframe using .l-body -->
-<div class="l-body responsive-iframe">
-  <iframe src="{{ '/assets/plotly/dtm.html' | relative_url }}" frameborder="0" scrolling="yes"></iframe>
+<div class="l-screen-inset responsive-iframe">
+  <iframe src="{{ '/assets/plotly/dtm.html' | relative_url }}" frameborder="0" scrolling="yes" style="border: 0px solid rgba(150, 150, 150, 0.5);></iframe>
 </div>
 
 <!-- Example of an iframe using .l-screen-inset for full width with some inset -->
 <div class="l-screen-inset responsive-iframe">
-  <iframe src="{{ '/assets/plotly/demo_Antenna.html' | relative_url }}" frameborder="0" scrolling="yes"></iframe>
+  <iframe src="{{ '/assets/plotly/demo_Antenna.html' | relative_url }}" frameborder="0" scrolling="yes"  style="border: 0px solid rgba(150, 150, 150, 0.5);></iframe>
 </div>
 
 <!-- Add more iframes as needed using the appropriate classes for the desired layout -->
@@ -185,12 +185,12 @@ iframe {
 </div>
 
 
-<div class="l-body">
-  <iframe src="{{ '/assets/plotly/demo_TIREM_nopattern.html' | relative_url }}" frameborder="0" scrolling="yes" height= "550px" margin-bottom= 12px width="105%" style="border: 1px solid rgba(150, 150, 150, 0.5);"></iframe>
+<div class="l-screen-inset responsive-iframe">
+  <iframe src="{{ '/assets/plotly/demo_TIREM_nopattern.html' | relative_url }}" frameborder="0" scrolling="yes" height= "550px" margin-bottom= 12px width="105%" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
 </div>
 
-<div class="l-body">
-  <iframe src="{{ '/assets/plotly/demo_TIREMwAntenna.html' | relative_url }}" frameborder="0" scrolling="yes" height= "550px" margin-bottom= 12px width="105%" style="border: 1px solid rgba(150, 150, 150, 0.5);"></iframe>
+<div class="l-screen-inset responsive-iframe">
+  <iframe src="{{ '/assets/plotly/demo_TIREMwAntenna.html' | relative_url }}" frameborder="0" scrolling="yes" height= "550px" margin-bottom= 12px width="105%" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
 </div>
 
 The plot must be generated separately and saved into an HTML file.
