--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -163,12 +163,12 @@ iframe {
 
 <!-- Example of an iframe using .l-body -->
 <div class="l-screen-inset responsive-iframe">
-  <iframe src="{{ '/assets/plotly/dtm.html' | relative_url }}" frameborder="0" scrolling="yes" style="border: 0px solid rgba(150, 150, 150, 0.5);></iframe>
+  <iframe src="{{ '/assets/plotly/dtm.html' | relative_url }}" frameborder="0" scrolling="yes"></iframe>
 </div>
 
 <!-- Example of an iframe using .l-screen-inset for full width with some inset -->
 <div class="l-screen-inset responsive-iframe">
-  <iframe src="{{ '/assets/plotly/demo_Antenna.html' | relative_url }}" frameborder="0" scrolling="yes"  style="border: 0px solid rgba(150, 150, 150, 0.5);></iframe>
+  <iframe src="{{ '/assets/plotly/demo_Antenna.html' | relative_url }}" frameborder="0" scrolling="yes"></iframe>
 </div>
 
 <!-- Add more iframes as needed using the appropriate classes for the desired layout -->
