--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -163,12 +163,12 @@ iframe {
 
 <!-- Example of an iframe using .l-body -->
 <div class="l-screen-inset responsive-iframe">
-  <iframe src="{{ '/assets/plotly/dtm.html' | relative_url }}" frameborder="0" scrolling="yes"></iframe>
+  <iframe src="{{ '/assets/plotly/dtm.html' | relative_url }}" frameborder="0" scrolling="yes" height= "550px" margin-bottom= 12px width="105%" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
 </div>
 
 <!-- Example of an iframe using .l-screen-inset for full width with some inset -->
 <div class="l-screen-inset responsive-iframe">
-  <iframe src="{{ '/assets/plotly/demo_Antenna.html' | relative_url }}" frameborder="0" scrolling="yes"></iframe>
+  <iframe src="{{ '/assets/plotly/demo_Antenna.html' | relative_url }}" frameborder="0" scrolling="yes" height= "550px" margin-bottom= 12px width="105%" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
 </div>
 
 <!-- Add more iframes as needed using the appropriate classes for the desired layout -->
@@ -177,10 +177,10 @@ iframe {
 
 <div class="l-body-container">
   <div class="l-body-double">
-    <iframe src="{{ '/assets/plotly/azaw3939_360.html' | relative_url }}" frameborder="0" scrolling="yes"></iframe>
+    <iframe src="{{ '/assets/plotly/azaw3939_360.html' | relative_url }}" frameborder="0" scrolling="yes" height= "550px" margin-bottom= 12px width="105%" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
   </div>
   <div class="l-body-double">
-    <iframe src="{{ '/assets/plotly/elevaw3939_360.html' | relative_url }}" frameborder="0" scrolling="yes"></iframe>
+    <iframe src="{{ '/assets/plotly/elevaw3939_360.html' | relative_url }}" frameborder="0" scrolling="yes" height= "550px" margin-bottom= 12px width="105%" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
   </div>
 </div>
 
