--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -139,7 +139,7 @@ iframe {
 /* Make sure colorbars don't overlap by providing enough space */
 /* Adjust the padding-bottom as necessary */
 .responsive-iframe {
-    padding-bottom: 30%; /* This percentage may need to be increased */
+    padding-bottom: 26%; /* This percentage may need to be increased */
     position: relative;
     height: 0;
     overflow: hidden;
@@ -148,7 +148,8 @@ iframe {
 @media only screen and (max-width: 600px) {
     /* On small screens, adjust the padding-bottom to give more space for the colorbar */
     .responsive-iframe {
-        padding-bottom: 85%; /* Increase as needed */
+        padding-bottom: 100%; /* Increase as needed */
+        width=150%;
     }
 }
 </style>
