display figures side-by-side

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -119,15 +119,17 @@ function(x) {
 
 You can add interative plots using plotly + iframes :framed_picture:
 <style>
-/* Ensure that iframes inside .l-body, .l-page, etc., are responsive and take full width and auto height */
-.l-body iframe,
-.l-page iframe,
-.l-body-outset iframe,
-.l-page-outset iframe,
-.l-screen iframe,
-.l-screen-inset iframe {
-    width: 100%;
-    height: 550px;
+/* Flex container for side-by-side iframe display */
+.figure-container {
+    display: flex;
+    justify-content: space-around; /* Adjusts spacing between iframes */
+    flex-wrap: wrap; /* Allows items to wrap as needed */
+}
+
+/* Responsive iframes with adjusted width for side-by-side view */
+.figure-container iframe {
+    flex: 0 1 48%; /* Allows the iframe to grow and shrink but with a base of 48% width */
+    height: auto; /* Adjust height as needed, or set to a specific value for uniformity */
     border: 0px solid rgba(150, 150, 150, 0.5);
 }
 
@@ -136,24 +138,29 @@ iframe {
     margin-bottom: 1px;
 }
 
-/* Make sure colorbars don't overlap by providing enough space */
-/* Adjust the padding-bottom as necessary */
+/* Adjust iframe container for aspect ratio and responsiveness */
 .responsive-iframe {
-    padding-bottom: 26%; /* This percentage may need to be increased */
     position: relative;
-    height: 0;
     overflow: hidden;
+    padding-bottom: 26%; /* Adjust based on the aspect ratio of the content */
 }
 
 @media only screen and (max-width: 600px) {
-    /* On small screens, adjust the padding-bottom to give more space for the colorbar */
+    /* Adjustments for small screens */
+    .figure-container {
+        flex-direction: column; /* Stacks iframes vertically on small screens */
+    }
+
+    .figure-container iframe {
+        flex: 0 0 100%; /* Makes iframe take full width on small screens */
+    }
+
     .responsive-iframe {
-        padding-bottom: 100%; /* Increase as needed */
-        width=150%;
+        padding-bottom: 100%; /* Adjust for aspect ratio on small screens */
+        width: 100%; /* Ensures full width on small screens */
     }
 }
 </style>
-
 <!-- Example of an iframe using .l-body -->
 <div class="l-screen-inset responsive-iframe">
   <iframe src="{{ '/assets/plotly/dtm.html' | relative_url }}" frameborder="0" scrolling="yes" height= "500px" margin-bottom= 1px width="100%" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
@@ -168,11 +175,11 @@ iframe {
 
 
 
-<div class="l-body-container">
-  <div class="l-body-double">
+<div class="figure-container">
+  <div class="responsive-iframe">
     <iframe src="{{ '/assets/plotly/azaw3939_360.html' | relative_url }}" frameborder="0" scrolling="yes" height= "500px" margin-bottom= 1px width="100%" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
   </div>
-  <div class="l-body-double">
+  <div class="responsive-iframe">
     <iframe src="{{ '/assets/plotly/elevaw3939_360.html' | relative_url }}" frameborder="0" scrolling="yes" height= "500px" margin-bottom= 1px width="100%" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
   </div>
 </div>
