change the figure container style

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -122,18 +122,21 @@ You can add interative plots using plotly + iframes :framed_picture:
 /* Flex container for side-by-side iframe display */
 .figure-container {
     display: flex;
-    justify-content: space-around; /* Adjusts spacing between iframes */
-    flex-wrap: wrap; /* Allows items to wrap as needed */
+    justify-content: space-between; /* Ensures iframes are spaced evenly across the full width */
+    align-items: stretch; /* Stretches items to fill the container vertically */
+    width: 100%; /* Ensures the container takes the full width of its parent */
+    max-width: 100%; /* Prevents the container from exceeding the width of the page */
+    flex-wrap: nowrap; /* Prevents wrapping to ensure side-by-side layout */
 }
 
 /* Responsive iframes with adjusted width for side-by-side view */
 .figure-container iframe {
-    flex: 1 0 48%; /* Allows the iframe to grow and shrink but with a base of 48% width */
+    flex: 1; /* Allows the iframe to grow and fill the space evenly */
     height: auto; /* Adjust height as needed, or set to a specific value for uniformity */
-    border: 0px solid rgba(150, 150, 150, 0.5);
+    border: none; /* Updates border styling */
 }
 
-/* Optional: Add a bottom margin to iframes */
+/* Optional: Adjust the bottom margin of iframes if needed */
 iframe {
     margin-bottom: 1px;
 }
@@ -142,25 +145,26 @@ iframe {
 .responsive-iframe {
     position: relative;
     overflow: hidden;
-    padding-bottom: 26%; /* Adjust based on the aspect ratio of the content */
+    /* This might be adjusted based on the content's aspect ratio */
 }
 
 @media only screen and (max-width: 600px) {
-    /* Adjustments for small screens */
     .figure-container {
         flex-direction: column; /* Stacks iframes vertically on small screens */
     }
 
     .figure-container iframe {
-        flex: 1 0 100%; /* Makes iframe take full width on small screens */
+        flex: 0 0 100%; /* Ensures iframe takes full width on small screens */
+        /* Adjust the height or padding-bottom as necessary for aspect ratio */
     }
 
     .responsive-iframe {
-        padding-bottom: 100%; /* Adjust for aspect ratio on small screens */
+        /* Adjust for aspect ratio on small screens */
         width: 100%; /* Ensures full width on small screens */
     }
 }
 </style>
+
 <!-- Example of an iframe using .l-body -->
 <div class="l-screen-inset responsive-iframe">
   <iframe src="{{ '/assets/plotly/dtm.html' | relative_url }}" frameborder="0" scrolling="yes" height= "500px" margin-bottom= 1px width="100%" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
