--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -132,7 +132,7 @@ You can add interative plots using plotly + iframes :framed_picture:
 /* Responsive iframes with adjusted width for side-by-side view */
 .figure-container iframe {
     flex: 1; /* Allows the iframe to grow and fill the space evenly */
-    height: auto; /* Adjust height as needed, or set to a specific value for uniformity */
+    height: 550px; /* Adjust height as needed, or set to a specific value for uniformity */
     border: none; /* Updates border styling */
 }
 
