update figure container

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -134,6 +134,7 @@ You can add interative plots using plotly + iframes :framed_picture:
     flex: 1; /* Allows the iframe to grow and fill the space evenly */
     height: 550px; /* Adjust height as needed, or set to a specific value for uniformity */
     border: none; /* Updates border styling */
+    width=200%;
 }
 
 /* Optional: Adjust the bottom margin of iframes if needed */
