update pattern files

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -124,12 +124,12 @@ You can add interative plots using plotly + iframes :framed_picture:
     display: flex;
     justify-content: space-between; /* Ensures iframes are spaced evenly across the full width */
     align-items: stretch; /* Stretches items to fill the container vertically */
-    width: 200%; /* Ensures the container takes the full width of its parent */
-    max-width: 200%; /* Prevents the container from exceeding the width of the page */
+    width: 100%; /* Ensures the container takes the full width of its parent */
+    max-width: 100%; /* Prevents the container from exceeding the width of the page */
     flex-wrap: nowrap; /* Prevents wrapping to ensure side-by-side layout */
 }
 
-/* Responsive iframes with adjusted width for side-by-side view */
+/* Responsive iframes with adjusted width for side-by-side view a*/
 .figure-container iframe {
     flex: 1; /* Allows the iframe to grow and fill the space evenly */
     height: 550px; /* Adjust height as needed, or set to a specific value for uniformity */
