put the prop pred figs side by side

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -165,6 +165,54 @@ iframe {
 }
 </style>
 
+
+<style>
+/* Flex container for side-by-side iframe display */
+.figure-container2 {
+    display: flex;
+    justify-content: space-between; /* Ensures iframes are spaced evenly across the full width */
+    align-items: stretch; /* Stretches items to fill the container vertically */
+    width: 150%; /* Ensures the container takes the full width of its parent */
+    max-width: 150%; /* Prevents the container from exceeding the width of the page */
+    flex-wrap: nowrap; /* Prevents wrapping to ensure side-by-side layout */
+}
+
+/* Responsive iframes with adjusted width for side-by-side view a*/
+.figure-container2 iframe {
+    flex: 2; /* Allows the iframe to grow and fill the space evenly */
+    height: 550px; /* Adjust height as needed, or set to a specific value for uniformity */
+    border: none; /* Updates border styling */
+}
+
+/* Optional: Adjust the bottom margin of iframes if needed */
+iframe {
+    margin-bottom: 1px;
+}
+
+/* Adjust iframe container for aspect ratio and responsiveness */
+.responsive-iframe {
+    position: relative;
+    overflow: hidden;
+    /* This might be adjusted based on the content's aspect ratio */
+}
+
+@media only screen and (max-width: 600px) {
+    .figure-container2 {
+        flex-direction: column; /* Stacks iframes vertically on small screens */
+    }
+
+    .figure-container2 iframe {
+        flex: 0 0 100%; /* Ensures iframe takes full width on small screens */
+        /* Adjust the height or padding-bottom as necessary for aspect ratio */
+    }
+
+    .responsive-iframe {
+        /* Adjust for aspect ratio on small screens */
+        width: 100%; /* Ensures full width on small screens */
+    }
+}
+</style>
+
 <!-- Example of an iframe using .l-body -->
 <div class="l-screen-inset responsive-iframe">
   <iframe src="{{ '/assets/plotly/dtm.html' | relative_url }}" frameborder="0" scrolling="yes" height= "500px" margin-bottom= 1px width="100%" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
@@ -190,11 +238,11 @@ iframe {
 
 
 
-<div class="figure-container">
-  <div class="l-screen-inset responsive-iframe">
+<div class="figure-container2">
+  <div class="responsive-iframe">
     <iframe src="{{ '/assets/plotly/demo_TIREM_nopattern.html' | relative_url }}" frameborder="0" scrolling="yes" height= "500px" margin-bottom= 1px width="100%" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
   </div>
-  <div class="l-screen-inset responsive-iframe">
+  <div class="responsive-iframe">
     <iframe src="{{ '/assets/plotly/demo_TIREMwAntenna.html' | relative_url }}" frameborder="0" scrolling="yes" height= "500px" margin-bottom= 1px width="100%" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
   </div>
 </div>
