put the prop pred figs side by side

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -166,21 +166,21 @@ iframe {
 </style>
 
 
+
 <style>
 /* Flex container for side-by-side iframe display */
 .figure-container2 {
     display: flex;
-    justify-content: space-between; /* Ensures iframes are spaced evenly across the full width */
+    justify-content: space-between; /* Ensures iframes are spaced evenly */
     align-items: stretch; /* Stretches items to fill the container vertically */
-    width: 150%; /* Ensures the container takes the full width of its parent */
-    max-width: 150%; /* Prevents the container from exceeding the width of the page */
+    width: 100%; /* Ensures the container takes the full width of its parent */
     flex-wrap: nowrap; /* Prevents wrapping to ensure side-by-side layout */
 }
 
-/* Responsive iframes with adjusted width for side-by-side view a*/
+/* Responsive iframes */
 .figure-container2 iframe {
-    flex: 2; /* Allows the iframe to grow and fill the space evenly */
-    height: 550px; /* Adjust height as needed, or set to a specific value for uniformity */
+    flex: 1; /* Allows the iframe to grow and fill the space evenly */
+    height: 100%; /* Sets iframe height to fill the container */
     border: none; /* Updates border styling */
 }
 
@@ -193,7 +193,8 @@ iframe {
 .responsive-iframe {
     position: relative;
     overflow: hidden;
-    /* This might be adjusted based on the content's aspect ratio */
+    height: 100vh; /* Sets a viewport relative height */
+    width: 50%; /* Each iframe should take half of the width */
 }
 
 @media only screen and (max-width: 600px) {
@@ -201,17 +202,17 @@ iframe {
         flex-direction: column; /* Stacks iframes vertically on small screens */
     }
 
-    .figure-container2 iframe {
-        flex: 0 0 100%; /* Ensures iframe takes full width on small screens */
-        /* Adjust the height or padding-bottom as necessary for aspect ratio */
+    .responsive-iframe {
+        width: 100%; /* Each iframe should take the full width on small screens */
+        height: 50vh; /* Adjust the height for small screens */
     }
 
-    .responsive-iframe {
-        /* Adjust for aspect ratio on small screens */
-        width: 100%; /* Ensures full width on small screens */
+    .figure-container2 iframe {
+        height: 50vh; /* Adjust iframe height on small screens */
     }
 }
 </style>
+
 
 <!-- Example of an iframe using .l-body -->
 <div class="l-screen-inset responsive-iframe">
@@ -236,14 +237,12 @@ iframe {
   </div>
 </div>
 
-
-
 <div class="figure-container2">
   <div class="responsive-iframe">
-    <iframe src="{{ '/assets/plotly/demo_TIREM_nopattern.html' | relative_url }}" frameborder="0" scrolling="yes" height= "500px" margin-bottom= 1px width="100%" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
+    <iframe src="{{ '/assets/plotly/demo_TIREM_nopattern.html' | relative_url }}" frameborder="0" scrolling="yes" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
   </div>
   <div class="responsive-iframe">
-    <iframe src="{{ '/assets/plotly/demo_TIREMwAntenna.html' | relative_url }}" frameborder="0" scrolling="yes" height= "500px" margin-bottom= 1px width="100%" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
+    <iframe src="{{ '/assets/plotly/demo_TIREMwAntenna.html' | relative_url }}" frameborder="0" scrolling="yes" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
   </div>
 </div>
 
