put the prop pred figs side by side

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -168,35 +168,36 @@ iframe {
 
 
 <style>
+html, body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden; /* Prevents horizontal scrollbar due to overflow */
+}
+
 /* Flex container for side-by-side iframe display */
 .figure-container2 {
     display: flex;
     justify-content: space-between; /* Ensures iframes are spaced evenly */
     align-items: stretch; /* Stretches items to fill the container vertically */
-    width: 100%; /* Ensures the container takes the full width of its parent */
+    width: 100vw; /* Ensures the container takes the full width of the viewport */
     flex-wrap: nowrap; /* Prevents wrapping to ensure side-by-side layout */
 }
 
 /* Responsive iframes */
-.figure-container2 iframe {
+.figure-container2 .responsive-iframe {
     flex: 1; /* Allows the iframe to grow and fill the space evenly */
-    height: 100%; /* Sets iframe height to fill the container */
-    border: none; /* Updates border styling */
+    min-width: 50vw; /* Each iframe will take at least half of the viewport width */
+    height: 100vh; /* Sets the height to be 100% of the viewport height */
 }
-
 
 @media only screen and (max-width: 600px) {
     .figure-container2 {
         flex-direction: column; /* Stacks iframes vertically on small screens */
     }
 
-    .responsive-iframe {
-        width: 100%; /* Each iframe should take the full width on small screens */
+    .figure-container2 .responsive-iframe {
+        min-width: 100vw; /* Each iframe should take the full width of the viewport on small screens */
         height: 50vh; /* Adjust the height for small screens */
-    }
-
-    .figure-container2 iframe {
-        height: 50vh; /* Adjust iframe height on small screens */
     }
 }
 </style>
@@ -227,10 +228,10 @@ iframe {
 
 <div class="figure-container2">
   <div class="responsive-iframe">
-    <iframe src="{{ '/assets/plotly/demo_TIREM_nopattern.html' | relative_url }}" frameborder="0" scrolling="yes" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
+    <iframe src="{{ '/assets/plotly/demo_TIREM_nopattern.html' | relative_url }}" frameborder="0" scrolling="yes" style="border: 0;"></iframe>
   </div>
   <div class="responsive-iframe">
-    <iframe src="{{ '/assets/plotly/demo_TIREMwAntenna.html' | relative_url }}" frameborder="0" scrolling="yes" style="border: 0px solid rgba(150, 150, 150, 0.5);"></iframe>
+    <iframe src="{{ '/assets/plotly/demo_TIREMwAntenna.html' | relative_url }}" frameborder="0" scrolling="yes" style="border: 0;"></iframe>
   </div>
 </div>
 
