put the prop pred figs side by side

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -172,12 +172,13 @@ html, body {
     margin: 0;
     padding: 0;
     overflow-x: hidden; /* Prevents horizontal scrollbar due to overflow */
+    box-sizing: border-box; /* Includes padding and border in the element's total width and height */
 }
 
 /* Flex container for side-by-side iframe display */
 .figure-container2 {
     display: flex;
-    justify-content: space-between; /* Ensures iframes are spaced evenly */
+    justify-content: center; /* Centers iframes horizontally */
     align-items: stretch; /* Stretches items to fill the container vertically */
     width: 100vw; /* Ensures the container takes the full width of the viewport */
     flex-wrap: nowrap; /* Prevents wrapping to ensure side-by-side layout */
@@ -185,9 +186,9 @@ html, body {
 
 /* Responsive iframes */
 .figure-container2 .responsive-iframe {
-    flex: 1; /* Allows the iframe to grow and fill the space evenly */
-    min-width: 50vw; /* Each iframe will take at least half of the viewport width */
+    flex: 0 0 50%; /* The iframe will not grow or shrink and will maintain a base size of 50% */
     height: 100vh; /* Sets the height to be 100% of the viewport height */
+    box-sizing: border-box; /* Includes padding and border in the element's total width and height */
 }
 
 @media only screen and (max-width: 600px) {
@@ -196,8 +197,9 @@ html, body {
     }
 
     .figure-container2 .responsive-iframe {
-        min-width: 100vw; /* Each iframe should take the full width of the viewport on small screens */
-        height: 50vh; /* Adjust the height for small screens */
+        width: 100vw; /* Each iframe should take the full width of the viewport on small screens */
+        height: auto; /* Adjust the height automatically */
+        flex: 0 0 auto; /* Adjust flex setting for small screens */
     }
 }
 </style>
